finished the bulk of the implementation

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Define the root logger with appender file
-log4j.rootLogger = INFO,CONSOLE
+log4j.rootLogger = INFO,CONSOLE,FILE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
@@ -23,4 +23,5 @@ log4j.appender.FILE.Append=true
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.conversionPattern=%d %p [%c] - (%t) %m%n
 
-#log4j.logger.org.springframework=debug
+log4j.logger.org.springframework=error
+log4j.logger.com.jwm=debug
