added configurable port numbers for forwarding

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -2,3 +2,6 @@ signalfile=/path/to/file.txt
 routeruser=user
 routerpass=password
 routerip=192.168.1.1
+sleeptime.seconds=5
+forward.port.from=80
+forward.port.to=80
